--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
+    "axios": "^0.24.0",
     "firebase": "^9.1.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.11",
