--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "axios": "^0.24.0",
+    "bcrypt": "^5.0.1",
     "firebase": "^9.1.0",
     "js-cookie": "^3.0.1",
     "mongoose": "^6.0.11",
     "next": "11.1.2",
     "next-connect": "^0.11.0",
+    "next-pwa": "^5.4.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
